updated film page

--- a/filmpage.html
+++ b/filmpage.html
@@ -10,7 +10,7 @@
     <body>
         
     <video width="1024" height="768" controls>
-        <source src="video/walls of solitude.mp4" type="video/mp4">
+        <source src="video/WallsofSolitude.mp4" type="video/mp4">
 
       </video>
 
